Added IoC, and working graph

--- a/src/NLogCentral.TestApp/NLog.config
+++ b/src/NLogCentral.TestApp/NLog.config
@@ -12,7 +12,7 @@
       <parameter name="machinename" type="System.String" layout="${machinename}"/>
       <parameter name="stacktrace" type="System.String" layout="${stacktrace}"/>
       <parameter name="processname" type="System.String" layout="${processname}"/>
-      <parameter name="date" type="System.String" layout="${date:universalTime=true}"/>
+      <parameter name="date" type="System.String" layout="${longdate:universalTime=True}"/>
     </target>
     <target xsi:type="Console" name="console" />
   </targets>
