--- a/src/NLogCentral.Web/NLogCentral.Web.csproj
+++ b/src/NLogCentral.Web/NLogCentral.Web.csproj
@@ -113,6 +113,7 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Views\applications.cshtml" />
     <Content Include="Views\application.cshtml" />
+    <Content Include="Views\errordetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -149,6 +150,7 @@
   <ItemGroup>
     <Compile Include="CustomBootstrapper.cs" />
     <Compile Include="Indexes\LogModelCountByLevelPerHour.cs" />
+    <Compile Include="Models\ErrorDetailsViewModel.cs" />
     <Compile Include="Models\LogModel.cs" />
     <Compile Include="Models\Statistic.cs" />
     <Compile Include="Models\ApplicationsViewModel.cs" />
